/*
 * This build file was auto generated by running the Gradle 'init' task
 * by 'qzhou' at '10/19/16 9:15 PM' with Gradle 2.8
 *
 * This generated file contains a commented-out sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/2.8/userguide/tutorial_java_projects.html
 */

// Apply the java plugin to add support for Java
apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = 17
targetCompatibility = 17

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenLocal()
    mavenCentral()
}

// In this section you declare the dependencies for your production and test code
dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation 'org.slf4j:slf4j-api:1.7.12'
    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
    implementation 'com.google.guava:guava:20.0'
    implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
    implementation group: 'cglib', name: 'cglib', version: '3.2.5'

    implementation 'org.springframework.security:spring-security-web:4.2.11.RELEASE'
    implementation 'org.springframework.security:spring-security-config:4.2.11.RELEASE'
    implementation group: 'com.google.zxing', name: 'core', version: '3.3.3'

    // Declare the dependency for your favourite test framework you want to use in your tests.
    // TestNG is also supported by the Gradle Test task. Just change the
    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
    // 'test.useTestNG()' to your build script.
    testImplementation 'junit:junit:4.12'

    testImplementation 'com.h2database:h2:1.3.148'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}